SonarCLoud bug and code smell fix - features/graph/
DEVJAM - Project Periscope